<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_TC" Id="{903dfe0d-40b2-43c1-aeee-fb603691a23d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_TC
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[TC_01(
    fResolution:= ,
    fTemp=> ,
    bConnected=> ,
    bError=> ,
    bUnderrange=> ,
    bOverrange=> );
TC_02(
    fResolution:= ,
    fTemp=> ,
    bConnected=> ,
    bError=> ,
    bUnderrange=> ,
    bOverrange=> );
TC_03(
    fResolution:= ,
    fTemp=> ,
    bConnected=> ,
    bError=> ,
    bUnderrange=> ,
    bOverrange=> );
TC_04(
    fResolution:= ,
    fTemp=> ,
    bConnected=> ,
    bError=> ,
    bUnderrange=> ,
    bOverrange=> );
TC_05(
    fResolution:= ,
    fTemp=> ,
    bConnected=> ,
    bError=> ,
    bUnderrange=> ,
    bOverrange=> );
TC_06(
    fResolution:= ,
    fTemp=> ,
    bConnected=> ,
    bError=> ,
    bUnderrange=> ,
    bOverrange=> );
TC_07(
    fResolution:= ,
    fTemp=> ,
    bConnected=> ,
    bError=> ,
    bUnderrange=> ,
    bOverrange=> );
TC_08(
    fResolution:= ,
    fTemp=> ,
    bConnected=> ,
    bError=> ,
    bUnderrange=> ,
    bOverrange=> );

    ]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>